gap fix

--- a/style.css
+++ b/style.css
@@ -247,7 +247,6 @@ footer {
         /* 📍 Свойства для расположения 2-x списков и отступа между ними */
         display: flex;
         flex-direction: column;
-        gap: 60px;
     }
 }
 
@@ -261,7 +260,7 @@ footer {
 
     .main-section .wrapper {
         /* 📍 Отступ между изображением и блоком с текстом */
-        gap: 50px;
+        gap: 40px;
     }
 
     .main-title {
@@ -273,6 +272,6 @@ footer {
     .about-section .wrapper,
     .info-wrapper {
         /* 📍 Отступ между изображением и блоком с текстом */
-        gap: 60px;
+        gap: 50px;
     }
 }
